--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -16,21 +16,27 @@
         <ul>
             <li><strong><a href="/">Home ▼</a></strong>
             <ul>
-                    <li><strong><a href="/troubleshoot">Troubleshoot</a></strong></li>
-                    <li><strong><a href="/instructions">Instructions</a></strong></li>
-                    <li><strong><a href="/download">Download</a></strong></li>
+                    <li><strong><a href="/#download">Download</a></strong></li>
+                    <li><strong><a href="/#instructions">Instructions</a></strong></li>
+                    <li><strong><a href="/#troubleshoot">Troubleshoot</a></strong></li>                
             </ul>
             </li>
-            <li><strong><a href="/why">Why</a></strong></li>
+            <li><strong><a href="/why">Why ▼</a></strong>
+            <ul>
+                <li><strong><a href="/why">Why</a></strong></li>
+                <li><strong><a href="/why#references">References</a></strong></li>
+            </ul>
+            </li>
             <li><strong><a href="/how">How</a></strong></li>
-            <li><strong><a href="/about">About</a></strong></li>
+            <li><strong><a href="/about">About Me</a></strong></li>
         </ul>
     </nav>
+
     <h4>
 
     </h4>
     <h1>
-        <span><b>ABOUT</b></span>
+        <span><b>ABOUT ME</b></span>
     </h1>
 
     <div class="about_img">
