--- a/templates/pages/why.html
+++ b/templates/pages/why.html
@@ -147,7 +147,7 @@
                 but had to depend on my dad because due to covid-19, she couldn’t even take a bus.
                 So, with my passion for technology, I thought of finding a solution to this problem.
                 But, when I found that it is a serious global issue,
-                I turned it into a project to help others too.
+                I turned it into a big project to help others too.
             </p>
         </div>
                 
@@ -475,7 +475,7 @@
         </p>
         <p>
             <div class="ref">
-                <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.srnesolar.com%2Fblog%2Fsolar-charge-controller-troubleshooting&psig=AOvVaw2IZ9dOzVq5gyUYs8xFGG2g&ust=1645419077734000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOCwnYu-jfYCFQAAAAAdAAAAABAD" target="_blank">https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.srnesolar.com%2Fblog%2Fsolar-charge-controller-troubleshooting&psig=AOvVaw2IZ9dOzVq5gyUYs8xFGG2g&ust=1645419077734000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOCwnYu-jfYCFQAAAAAdAAAAABAD</a>
+                <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.srnesolar.com%2Fblog%2Fsolar-charge-controller-troubleshooting&psig=AOvVaw2IZ9dOzVq5gyUYs8xFGG2g&ust=1645419077734000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCOCwnYu-jfYCFQAAAAAdAAAAABAD" target="_blank">https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.srnesolar.com</a>
             </div>
             <div class="ref">
                 <a href="https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/119767284/original/a8f0b5212f02008c77a3af95887a54f3ba13d0c2/troubleshooting-computer-issues-on-spot.jpg" target="_blank">https://fiverr-res.cloudinary.com/images/q_auto,f_auto/gigs/119767284/original/a8f0b5212f02008c77a3af95887a54f3ba13d0c2/troubleshooting-computer-issues-on-spot.jpg</a>
