--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="static/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="Description" CONTENT="Drowsiness Detector for when you are driving">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="{{ ADDPlus_icon }}"/>
     <title>Anti Drowsy Driving</title>
