--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="Description" CONTENT="Drowsiness Detector for when you are driving">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type='text/javascript'>
+      window.smartlook||(function(d) {
+        var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+        var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+        c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+        })(document);
+        smartlook('init', '3d1ca419377f9b0f266f575d45a92c0baff31c28', { region: 'eu' });
+    </script>
     <link rel="shortcut icon" type="image/jpg" href="{{ ADDPlus_icon }}"/>
     <title>Anti Drowsy Driving</title>
 </head>
